Update Battle of Neighborhoods.ipynb

--- a/Battle of Neighborhoods.ipynb
+++ b/Battle of Neighborhoods.ipynb
@@ -736,7 +736,7 @@
    "metadata": {},
    "source": [
     "## Discussion and Conclusion\n",
-    "Vancouver has the highest number of restaurants in Greater Vancouver Area, then Richmond and Burnaby. From the bar grahp, we can also see most of the Chinese restaurants are located in one of these three boroughs. In conclusion, when I meet my friends and want to find a Chinese restaurant, we should stay in either Burnaby, Richmond, or Vancouver."
+    "Vancouver has the highest number of restaurants in Greater Vancouver Area, then Richmond and Burnaby. From the bar graph, we can also see most of the Chinese restaurants are located in one of these three boroughs. In conclusion, when I meet my friends and want to find a Chinese restaurant, we should stay in either Burnaby, Richmond, or Vancouver."
    ]
   },
   {
